2007-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* TextInfo.cs : ICloneable.
	* GregorianCalendarTypes.cs CompareOptions.cs CultureTypes.cs
	  CalendarWeekRule.cs UnicodeCategory.cs : [Serializable].
	* ThaiBuddhistCalendar.cs GregorianCalendar.cs KoreanCalendar.cs
	  TaiwanCalendar.cs JapaneseCalendar.cs :
	  GetWeekOfYear() (base could be simply used). Removed unused code.

2007-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* UmAlQuraCalendar.cs
	  EastAsianLunisolarCalendar.cs
	  ChineseLunisolarCalendar.cs
	  TaiwanLunisolarCalendar.cs
	  JapaneseLunisolarCalendar.cs
	  KoreanLunisolarCalendar.cs : new 2.0 calendars.
	* Calendar.cs
	  HijriCalendar.cs HebrewCalendar.cs ThaiBuddhistCalendar.cs
	  GregorianCalendar.cs KoreanCalendar.cs JulianCalendar.cs
	  TaiwanCalendar.cs JapaneseCalendar.cs PersianCalendar.cs :
	  added GetLeapMonth().
	* CalendricalCalculations.cs : added some lunisolar calendar stuff.
	  mostly stubs.

2007-06-24  Gert Driesen  <drieseng@users.sourceforge.net>

	* CultureInfo.cs: Added new private ctors that takes value for 
	read-only bit as argument. In ContructInvariant, clone invariant 
	NumberFormatInfo and DateTimeFormatInfo when we're not creating a
	read-only CultureInfo, since they also should not be read-only.
	Changes are required to allow a writable invariant CultureInfo to be
	constructed. In GetCultures, use clone of InvariantCulture since it 
	must be not be read-only. In GetCultureInfo, always construct
	read-only CultureInfo's. Fixes part of bug #81930.

2007-06-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Calendar.cs DateTimeFormatInfo.cs : 2.0 API fixes.
	* CalendricalCalculations.cs : fixed AddMonth() and AddYears() to
	  consider that the max days in the target month (for AddYears()
	  leap year month could matter). Fixed bug #81783.

2007-05-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GregorianCalendar.cs: Change era names from C.E./Common Era 
	to AD/A.D.