@@ -29,6 +29,9 @@
 
 namespace System.Globalization
 {
+#if NET_2_0
+	[System.Runtime.InteropServices.ComVisible (true)]
+#endif
 	[Serializable]
 	public class DaylightTime
 	{
