@@ -29,6 +29,7 @@
 namespace System.Globalization {
 
 using System;
+using System.Runtime.InteropServices;
 
 /// <summary>
 /// This is the Japanese calendar. It differs from the Gregorian calendar
@@ -68,6 +69,9 @@ using System;
 /// </para>
 /// </remarks>
 [Serializable]
+#if NET_2_0
+[ComVisible (true)]
+#endif
 [MonoTODO ("Serialization format not compatible with .NET")]
 public class JapaneseCalendar : Calendar {
 	/// <summary>
@@ -409,6 +413,7 @@ public class JapaneseCalendar : Calendar {
 	}
 
 #if NET_2_0
+	[ComVisible (false)]
 	public override int GetLeapMonth (int year, int era)
 	{
 		return 0;
@@ -454,6 +459,7 @@ public class JapaneseCalendar : Calendar {
 	}
 
 #if NET_2_0
+	[ComVisible (false)]
 	public override int GetWeekOfYear (DateTime date, CalendarWeekRule rule, DayOfWeek firstDayOfWeek)
 	{
 		return base.GetWeekOfYear (date, rule, firstDayOfWeek);
@@ -615,6 +621,7 @@ public class JapaneseCalendar : Calendar {
 	}
 
 #if NET_2_0
+	[ComVisible (false)]
 	public override CalendarAlgorithmType AlgorithmType {
 		get {
 			return CalendarAlgorithmType.SolarCalendar;
@@ -624,12 +631,14 @@ public class JapaneseCalendar : Calendar {
 	static DateTime JapanMin = new DateTime (1868, 9, 8, 0, 0, 0);
 	static DateTime JapanMax = new DateTime (9999, 12, 31, 11, 59, 59);
 		
+	[ComVisible (false)]
 	public override DateTime MinSupportedDateTime {
 		get {
 			return JapanMin;
 		}
 	}
 
+	[ComVisible (false)]
 	public override DateTime MaxSupportedDateTime {
 		get {
 			return JapanMax;
