@@ -36,6 +36,9 @@ using System.Collections;
 namespace System.Globalization {
 
 	[Serializable]
+#if NET_2_0
+	[System.Runtime.InteropServices.ComVisible (true)]
+#endif
 	public class TextElementEnumerator: IEnumerator {
 		private int index;
 		private int elementindex;
